test: uglify js

--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
         <canvas id="canvas" width="1920", height="920"></canvas>
     </div>
     <script src="./constant.js"></script>
-    <script src="./script.js"></script>
+    <script src="./ugly-script.js"></script>
 </body>
 </html>
