--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <canvas id="canvas" width="1920", height="920"></canvas>
     </div>
-    <script src="./constant.js"></script>
+    <script src="./ugly-constant.js"></script>
     <script src="./ugly-script.js"></script>
 </body>
 </html>
