fix: text and text-align

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             </div>
             <div id="stage-result-footer">H를 누르면 다음 스테이지로 이동합니다.</div>
         </div>
-        <div id="information" class="flex-column hidden">
+        <div id="information" class="flex-column hidden align-center">
             <div id="information-title" class="title margin"></div>
-            <div id="information-header" class="align-center"></div>
+            <div id="information-header" class="margin"></div>
             <div class="flex margin">
                 <div id="information-left" class="flex left-right"></div>
                 <div id="arrow" class="flex hidden"></div>
