--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="space">─</div>
                 <div id="reserved-item" class="margin stage-result-right"></div>
             </div>
-            <div class="flex">
+            <div id="perfect-clear-div" class="flex">
                 <div class="stage-result-left">퍼펙트 클리어</div>
                 <div class="space">─</div>
                 <div id="perfect-clear" class="margin stage-result-right"></div>
