fix: change keycode

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="space">─</div>
                 <div id="total-score" class="margin stage-result-right"></div>
             </div>
-            <div id="stage-result-footer">H를 누르면 다음 스테이지로 이동합니다.</div>
+            <div id="stage-result-footer">F를 누르면 다음 스테이지로 이동합니다.</div>
         </div>
         <div id="information" class="flex-column hidden align-center">
             <div id="information-title" class="title margin"></div>
