feat: Change gameResult's back button into canvas

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="space"></div>
                 <div id="rank" class="margin game-result-right"></div>
             </div>
-            <button id="back">메인 페이지로 돌아가기</button> <!-- canvas 생성 후 버튼으로 대체 -->
+            <canvas id="back"></canvas>
         </div>
         <div id="stage-result" class="flex-column hidden">
             <div id="stage-result-title" class="title margin"></div>
